--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jquery": "^3.3.29",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -22,6 +23,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3",
     "ts-loader": "^5.3.2",
     "typescript": "^3.2.2",
